--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -254,9 +254,23 @@ input[type="text"], input[type="password"] {
     width: 90%;
     padding: 10px;
     margin: 10px 10px 10px 10px;
-    border-bottom: 1px solid #AAA;
+   /* border-bottom: 1px solid #AAA;*/
 }
 
+#widget h2 {
+    background: #EEE;
+    padding: 5px;
+    color: #666;
+    font-weight: bold;
+    text-shadow: #FFF 1px 1px 1px;
+    text-transform: uppercase;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    -moz-border-radius-topleft: 7px;
+    -moz-border-radius-topright: 7px;
+    -webkit-border-top-left-radius: 7px;
+    -webkit-border-top-right-radius: 7px;
+}
 #tools {
     text-align: right;
     margin: 5px;
