--- a/src/e_cidadania/apps/spaces/templates/spaces/document_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_list.html
@@ -8,12 +8,16 @@
 {% block content %}
 
   {% block centercol %}
-    <div id="centercol">
+    <div class="grid_16">
       {% for doc in doc_list %}
         <p><a href="{{ doc.docfile }}">{{ doc.title }}</a></p>
         <p>{% trans "Published" %} {{ doc.pub_date }}</p>
+      {% empty %}
+        <p>{% trans "There are no documents in this space." %}</p>
       {% endfor %}
-      <a href="/">{% trans "Go back" %}</a>
+      <div class="pagebutton">
+        <a href="../">{% trans "Go back" %}</a>
+      </div>
     </div>
   {% endblock %}
 
