--- a/src/e_cidadania/apps/news/templates/news/post_delete.html
+++ b/src/e_cidadania/apps/news/templates/news/post_delete.html
@@ -2,13 +2,25 @@
 {% load i18n %}
 
 {% block title %}{% trans "Delete news" %}{% endblock %}
-{% block logo %}<img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
-{% block banner %}<img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
+{% block logo %}
+  {% if not get_place %}
+    <a href="/"><img src="/{{ STATIC_URL }}/assets/logos/index.png"/></a>
+  {% else %}
+    <img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">
+  {% endif %}
+{% endblock %}
+{% block banner %}
+  {% if not get_place %}
+    <img src="/{{ STATIC_URL }}/assets/banners/index.png"/>
+  {% else %}
+    <img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">
+  {% endif %}
+{% endblock %}
 
 {% block content %}
 
   {% block centercol %}
-    <div id="centercol">
+    <div class="grid_16">
         <form action="" method="post">{% csrf_token %}
           <p>{% trans "Are you sure you want to delete this post? This action cannot be undone." %}</p>
 
