--- a/src/e_cidadania/apps/proposals/templates/proposal/proposal_delete.html
+++ b/src/e_cidadania/apps/proposals/templates/proposal/proposal_delete.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   {% block centercol %}
-    <div id="centercol">
+    <div class="grid_11">
         <form action="" method="post">{% csrf_token %}
           <p>{% trans "Are you sure you want to delete this proposal? This action cannot be undone." %}</p>
 
@@ -21,6 +21,8 @@
 
 
   {% block rightcol %}
+    <div class="grid_5">
+    </div>
   {% endblock %}
 
 {% endblock %}
