Finished adapting spaces templates to fluid 960

--- a/src/e_cidadania/apps/spaces/templates/spaces/document_edit.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_edit.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   {% block centercol %}
-    <div id="centercol">
+    <div class="grid_16">
       <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
 
         {{ form.as_p }}
