Adapted user profile templates to fluid 960 grid

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/delete.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/delete.html
@@ -5,7 +5,7 @@
 {% block robots %}noindex,nofollow{% endblock %}
 
 {% block content %}
-    <div id="contenttitles">{% trans "Remove profile" %}</div>
+    <div class="grid_16">{% trans "Remove profile" %}</div>
         <div id="contentinside">
             <p>{% trans "It erases all your private data except your username. You can refill the information later if you want to." %}</p>
             
