--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/delete_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/delete_done.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div id="contenttitles">{% trans "Personal data removed" %}</div>
-    <div id="contentinside">{% trans "Your profile information has been removed successfully." %}
+    <div class="grid_16">{% trans "Your profile information has been removed successfully." %}
         <div></br></br>
             <a href="/">&laquo; {% trans "Back to home page" %}</a></br>
             <a href="/accounts/">&laquo; {% trans "Back to your profile" %}</a>
