--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -687,6 +687,7 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
     -moz-border-radius-bottomright: 20px;
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    overflow: hidden;
 }
 
 .post h1 {
