--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -42,10 +42,10 @@ a:active {
 
 #footerhighlight {
     float: left;
-    height: 50px;
-    margin-top: 15px;
-    padding: 10px;
-    margin-right: 15px;
+    height: 75px;
+    margin-top: 2px;
+    padding: 10px 20px 10px 10px;
+    margin-right: 35px;
     border-right: 1px solid #AAA;
 }
 
