--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -2,6 +2,8 @@ body {
 	padding: 0 80px 20px 80px;
 	font-family:"Lucida Grande","bitstream vera sans","trebuchet ms",sans-serif,verdana;
 	background: #FFF;
+	width: 810px;
+	margin: auto;
 }
 
 a {
@@ -62,6 +64,7 @@ a:active {
 
 	#header {
 	  height: 100px;
+	  margin-top: 40px;
 	  margin-bottom: 15px;
 	  border-bottom: 7px solid #226e43;
 	}
