Fixed proposals import, updated humans

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -84,6 +84,7 @@
         </p>
 	    {% endblock %}
         <p>(c) 2010-{% now "Y" %} <a href="http://trac.cidadania.coop">e-cidadania</a> {% trans "created by" %} <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a></p>
+        <p><a href="{{ STATIC_URL }}/humans.txt"><img src="/{{ STATIC_URL }}/assets/humanstxt.png"/></a></p>
     </div>
 	  
 	</body>
