Fixed all permissions request in proposal views. Fixed permissions filter in spaces index. Mionor fixes tio proposal add template

--- a/src/e_cidadania/apps/proposals/templates/proposal/proposal_add.html
+++ b/src/e_cidadania/apps/proposals/templates/proposal/proposal_add.html
@@ -44,6 +44,7 @@
       {{ form.belongs_to.as_hidden }}
       {{ form.author.as_hidden }}
       {{ form.support_votes.as_hidden }}
+      {{ form.code.as_hidden }}
 
         <p><input type="submit" value="{% trans 'Continue' %} &rarr;" /></p>
     </form>
