Converted some views tio class-based and fixed proposal folter

--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
@@ -10,16 +10,15 @@
 
   {% block centercol %}
     <div class="grid_11">
-    {{ proposal.title }}
-    {% for p in proposal_list %}
+    {% for p in object_list %}
       <div id="proposal-wrapper">
-        {% if perm.proposals.add_proposal %}
+        {% if perms.proposals.add_proposal %}
         <div id="tools">
           <a href="add/">{% trans "Add" %}</a> | 
-          {% if perm.proposals.edit_proposal %}
+          {% if perms.proposals.edit_proposal %}
             <a href="edit/{{ p.id }}">{% trans "Edit" %}</a> |
           {% endif %}
-          {% if perm.proposals.delete_proposal %}
+          {% if perms.proposals.delete_proposal %}
             <a href="delete/{{ p.id }}">{% trans "Delete" %}</a>
           {% endif %}
         </div>
