--- a/src/e_cidadania/apps/spaces/templates/spaces/document_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_list.html
@@ -9,7 +9,7 @@
 
   {% block centercol %}
     <div class="grid_16">
-      {% for doc in object_list %}
+      {% for doc in document_list %}
         <p><a href="{{ doc.docfile }}">{{ doc.title }}</a></p>
         <p>{% trans "Published" %} {{ doc.pub_date }}</p>
       {% empty %}
